# Dash-standalone

./: .gitignore  pyproject.toml
.github/workflows/: main.yml
