[tool.poetry]
name = "dash-nuitka-boilerplate"
version = "0.1.0"
description = ""
authors = ["Lukas Tenbrink <lukas.tenbrink@gmail.com>"]
readme = "README.md"
packages = [
    { include = "dnb", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
dash = "^3.1.1"
plotly = "^6.2.0"
pandas = "^2.3.0"
pywebview = "^5.4"
setproctitle = "^1.3.6"
nuitka = {version="^2.7.11", optional=true}


[tool.poetry.extras]
nuitka = ["nuitka"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
